--- a/index.html
+++ b/index.html
@@ -278,6 +278,9 @@ ada feugiat. Nulla quis lorem ut libero malesuada feugiat. Vivamus magna justo</
         </div>
       </div>
     </footer>
+    <div id="loading">
+      <div class="loading-spinner"></div>
+    </div>
     <script src="./js/main.js"></script>
   </body>
 </html>
